--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "server": "npx json-server ./app/api/db.json --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
